sys/arm/broadcom/bcm2835/bcm2835_firmware.c
@@ -180,5 +180,5 @@ DEFINE_CLASS_1(bcm2835_firmware, bcm2835_firmware_driver,
     simplebus_driver);
 
 EARLY_DRIVER_MODULE(bcm2835_firmware, simplebus, bcm2835_firmware_driver,
-    bcm2835_firmware_devclass, 0, 0, BUS_PASS_INTERRUPT + BUS_PASS_ORDER_LAST);
+    bcm2835_firmware_devclass, 0, 0, BUS_PASS_BUS + BUS_PASS_ORDER_LATE);
 MODULE_DEPEND(bcm2835_firmware, mbox, 1, 1, 1);
